[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
hls = { path = "../hls" }
env_logger = "0.10.0"
log = "0.4.17"
url = "2.3.1"
clap = { version = "4.1.4", features = ["derive"] }
lazy_static = "1.4.0"
tokio = { version = "1.25.0", features = ["macros", "rt", "time"] }
crossbeam-deque = "0.8.2"
reqwest = "0.11.14"
